# controllers/contact.js
@@ -1,69 +1,61 @@
-const ObjectId = require("mongodb").ObjectId;
-const contacts  = require("../models");
-const Contact = require('../models/contact');
+const Contacts = require('../models/contact');
 // GET /contacts
 exports.getAllContacts = async (req, res) => {
   try {
-    const contacts = await Contact.find();
+    const contacts = await Contacts.find();
     res.json(contacts);
   } catch (err) {
     res.status(500).json({ error: 'Internal server error' });
   }
 };
 
-exports.getSingle = (req, res)=>{
-  if (!ObjectId.isValid(req.params.id)) {
-      res.status(400).json('Must use a valid contact id to find a contact.');
-      }
-  const contactsId = new ObjectId(req.params.id);
-  contacts.find({_id: contactsId}).then((contacts) =>{
-      res.setHeader("Content-Type", "application/json");
-      res.status(200).json(contacts[0])
-  }).catch((err) => {
-      throw Error("error with getSingle function in the user controller", err);
-  })
+exports.getSingle = async (req, res)=>{
+try{
+  const contactsId = req.params.id;
+  console.log(contactsId)
+  const contact = await Contacts.findById(contactsId)
+
+  res.status(200).json({data:contact})
+ 
 }
+catch(err) {
+  console.log(err,"Could not get contact by id")
+}
+};
+
 
 // POST /contacts
-exports.createContact =(req, res) =>{
-  const newDoc = new contacts({
+exports.createContact =async(req, res) =>{
+try{
+  const newContacts =  {
       firstName: req.body.firstName,
       lastName: req.body.lastName,
       address: req.body.address,
-      town: req.body.town,
+      town: req.body.Town,
       age: req.body.age,
       phonenumber: req.body.phonenumber,
-  })
-
-
-  newDoc.save(newDoc).then((data) => {
-      res.send(data);
-  }).catch((err) =>{
-      throw Error("error occured", err);
-  })
+  }
+  const aNewContact = await Contacts.create(newContacts)
+  res.status(201).json({data:aNewContact})
+  }catch(err) {
+   res.status(500).json({err: "Error occured"})
+  }
 }
 
 // PUT /contacts/:id
 exports.updateContact = async (req, res) => {
-    if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json('Must use a valid contact id to find a contact.');
-    }
-    const contactsId = new ObjectId(req.params.id);
-    const newDoc = {}
-        if (req.body.firstName !== undefined) newDoc.firstName = req.body.firstName;
-        if (req.body.lastName !== undefined) newDoc.lastName= req.body.lastName;
-        if (req.body.address !== undefined) newDoc.address = req.body.address;
-        if (req.body.town !== undefined) newDoc.town = req.body.town;
-        if (req.body.age!== undefined) newDoc.age = req.body.age;
-        if (req.body.phonenumber !== undefined) newDoc.phonenumber = req.body.phonenumber;
-    
+try{
+    const contactsId = req.params.id;
+    console.log(contactsId)
+    const body = req.body
+    console.log(body)
+    const update = Contacts.findByIdAndUpdate(contactsId, body)
+     res.status(201).json ({data:update}) 
 
-  contacts.updateOne({_id: contactsId}, {$set: newDoc})
-    .then((data) => {
-        res.send(data);
-    }).catch((err) =>{
+ 
+    } catch(err) {
         throw Error("fail to update", err);
-    })
+    }
 }
 
 // DELETE /contacts/:id
