# models/swagger.json
@@ -1,11 +1,11 @@
 {
     "swagger": "2.0",
     "info": {
-      "title": "users Api",
-      "description": "users Api",
+      "title": "contacts Api",
+      "description": "contacts Api",
       "version": "1.0.0"
     },
-    "host": "cse-341-42in.onrender.com",
+    "host": "my-project-nq2f.onrender.com",
     "basePath": "/",
     "schemes": [
       "https"
@@ -22,10 +22,10 @@
         }
       },
      
-      "/users/": {
+      "/contacts/": {
         "get": {
           "tags": [
-            "users"
+            "contacts"
           ],
           "description": "",
           "produces": [
@@ -38,10 +38,10 @@
           }
         }
       },
-      "/users/{id}": {
+      "/contacts/{id}": {
         "get": {
           "tags": [
-            "users"
+            "contacts"
           ],
           "description": "",
           "produces": [
@@ -49,7 +49,7 @@
           ],
           "parameters": [
             {
-              "name": "id",
+              "firstName": "id",
               "in": "path",
               "required": true,
               "type": "string"
@@ -63,7 +63,7 @@
         },
         "post": {
           "tags": [
-            "users"
+            "contacts"
           ],
           "description": "",
           "parameters": [
@@ -85,7 +85,7 @@
                   "lastName": {
                     "example": "any"
                   },
-                  "email": {
+                  "": {
                     "example": "any"
                   },
                   "favoritecolor": {
